--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,14 @@
 Order deny,allow
 Deny from all
+
+SetEnv MAGE_IS_DEVELOPER_MODE TRUE
+
+SetEnvIf X-Forwarded-Proto https HTTPS=on
+
+RewriteCond %{SERVER_PORT} 80 
+
+RewriteRule ^(.*)$ https://%{HTTP_HOST}/$1 [R,L]
+
+RewriteCond %{HTTPS} On
+
+#RewriteRule ^ https://bdbbuy.com%{REQUEST_URI} [R,L]
